# experience_schema

./: Cargo.toml  OWNER.yml  README.md
.github/workflows/: ci.yml
docs/contracts/: anonymous_browse_play_v1.md
docs/wiki/: README.md  anonymous-browse-play-contract-v1--c884c45e.md  experience-schema-publish-contract--8f0e24b3.md
examples/anonymous_browse_play_v1/: catalog_response.json  detail_response.json  play_bootstrap_response.json  schema_fetch_response.json
fixtures/published_experience_contract/v1/: client_authored_schema.json  fixture_manifest.json  publish_payload_template.json
src/: lib.rs
src/assets/: asset_bundle_schema.rs  asset_ref.rs  asset_store_schema.rs  mod.rs
src/experience_schema/: experience_schema.rs  mod.rs  protobuf.rs  transpile.rs
src/experience_schema/client_authored/: client_authored_schema.rs  mod.rs
src/experience_schema/client_authored/assets/: asset_bundles_schema.rs  asset_stores_schema.rs  mod.rs
src/experience_schema/client_authored/cursors/: cursor_set_schema.rs  cursor_sets_schema.rs  mod.rs
src/experience_schema/client_authored/input/: input_action_schema.rs  input_layer_schema.rs  mod.rs
src/experience_schema/client_authored/material_grid_2d/: material_grid_rule_table_schema.rs  mod.rs
src/experience_schema/client_authored/meta_data/: client_published_metadata_schema.rs  mod.rs
src/experience_schema/service_authored/: mod.rs  service_authored_schema.rs
src/experience_schema/shared/: anonymous_browse_play_v1.rs  mod.rs
src/properties/: authored_property_view.rs  compiled_property_layout_schema.rs  mod.rs  property.rs  property_map.rs
src/wire_compat/: json_message.rs
(+53 files in other folders)
