[package]
name = "experience_schema"
version = "0.1.0"
authors = ["World Builder"]
edition = "2024"
description = "Shared experience schema contracts for WorldBuilder clients and backend services."
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/worldbuilder/experience_schema"
homepage = "https://github.com/worldbuilder/experience_schema"
documentation = "https://docs.rs/experience_schema"
keywords = ["game", "schema", "serialization", "worldbuilder"]
categories = ["game-development", "data-structures"]

[dependencies]
assets = { git = "https://github.com/WorldBuilderEngine/world_builder.git", package = "assets" }
properties = { git = "https://github.com/WorldBuilderEngine/world_builder.git", package = "properties" }
anyhow = ">=1.0.98"
bytemuck = ">=1.24.0"
log = ">=0.4.27"
serde = { version = ">=1.0.228", features = ["derive"] }
serde_json = ">=1.0.145"
prost = ">=0.14.1"
